--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <h3>Lista zadań:</h3>
             <p class="alertInfo">Brak zadań na liście.</p>
             <ul>
-                <li id='test'>Wypić kawę<div class="tools"><button class="complete"><i
-                                class="fas fa-check"></i></button><button class="edit">EDIT</button><button
-                            class="delete"><i class="fas fa-times"></i></button>
+                <li id='test'>Wypić kawę
+                    <div class="tools">
+                        <button class="complete"><i class="fas fa-check"></i></button>
+                        <button class="edit">EDIT</button>
+                        <button class="delete"><i class="fas fa-times"></i></button>
                     </div>
                 </li>
                 <li id='test2'>Zjeść śniadanie<div class="tools"><button class="complete"><i
